# covid-chip-shortage-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: DataPreprocessing.ipynb  DataPreprocessingCovid.ipynb  DataPreprocessingOICA.ipynb  EDA_automotive.ipynb  old_EDA.ipynb
scraping_scripts/: automotive_data.py  covid_data.py
