[tool.poetry]
name = "covid-chip-shortage-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"
pandas = "^1.3.5"
openpyxl = "^3.0.9"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
plotly = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
